--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 
+title: My Blog
 header-img: img/home-bg.png
 email: jordanrumeld@me.com
 copyright_name: jordanrumeld
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Flatiron
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  jordanrumeld
